--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <p>This line is here to show how merging works.</p>
     <p>This line is here to show how merging works.</p>
 
+
+    <a href="google.com"> Search For Anything</a>
+
 </body>
 </html>
